Restrit user action on Orders & Code refactoring